--- a/Recommendation_Systems_Learner_Notebook_Full_Code.ipynb
+++ b/Recommendation_Systems_Learner_Notebook_Full_Code.ipynb
@@ -2060,13 +2060,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
-        "id": "NbSom7195JtR"
+        "id": "NbSom7195JtR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6dfe2512-fbce-4860-f093-a450dd8d1b63"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total number of rows: 65290\n",
+            "Number of unique user IDs: 1540\n",
+            "Number of unique product IDs: 5689\n"
+          ]
+        }
+      ],
       "source": [
-        "# Number of total rows in the data and number of unique user id and product id in the data\n"
+        "# Number of total rows in the data and number of unique user id and product id in the data\n",
+        "total_rows = df_final.shape[0]\n",
+        "print(f\"Total number of rows: {total_rows}\")\n",
+        "\n",
+        "unique_user_ids = df_final['user_id'].nunique()\n",
+        "print(f\"Number of unique user IDs: {unique_user_ids}\")\n",
+        "\n",
+        "unique_product_ids = df_final['prod_id'].nunique()\n",
+        "print(f\"Number of unique product IDs: {unique_product_ids}\")\n"
       ]
     },
     {
@@ -2075,7 +2097,7 @@
         "id": "Qwgz6CUt-sVI"
       },
       "source": [
-        "**Write your observations here:_______**"
+        "**Write your observations here:** There are 65290 rows in the dataset out of which there are 1540 unique users who provided ratings on 5689 unique products"
       ]
     },
     {
@@ -2089,13 +2111,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
-        "id": "n7MX452q5JtR"
+        "id": "n7MX452q5JtR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1c6f1795-85e7-4dc9-de91-84671f9f7f60"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Top 10 users based on number of ratings:\n",
+            "user_id\n",
+            "A5JLAU2ARJ0BO     520\n",
+            "ADLVFFE4VBT8      501\n",
+            "A3OXHLG6DIBRW8    498\n",
+            "A6FIAB28IS79      431\n",
+            "A680RUE1FDO8B     406\n",
+            "A1ODOGXEYECQQ8    380\n",
+            "A36K2N527TXXJN    314\n",
+            "A2AY4YUOX2N1BQ    311\n",
+            "AWPODHOB4GFWL     308\n",
+            "A25C2M3QF9G7OQ    296\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ],
       "source": [
-        "# Top 10 users based on the number of ratings\n"
+        "# Top 10 users based on the number of ratings\n",
+        "top_10_users = df['user_id'].value_counts().head(10)\n",
+        "print(\"Top 10 users based on number of ratings:\")\n",
+        "print(top_10_users)\n"
       ]
     },
     {
@@ -2104,7 +2153,8 @@
         "id": "1X2w_jt9-sVI"
       },
       "source": [
-        "**Write your observations here:_______**"
+        "**Write your observations here:** df['user_id'].value_counts() counts how many ratings each user has provided.\n",
+        ".head(10) retrieves the top 10 users with the highest count of ratings."
       ]
     },
     {
