--- a/Recommendation_Systems_Learner_Notebook_Full_Code.ipynb
+++ b/Recommendation_Systems_Learner_Notebook_Full_Code.ipynb
@@ -2591,17 +2591,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
         "id": "zKU__5s1xhXi"
       },
       "outputs": [],
       "source": [
         "# Defining a function to get the top n products based on the highest average rating and minimum interactions\n",
+        "def get_top_n_products(df, n, min_interactions):\n",
         "\n",
         "# Finding products with minimum number of interactions\n",
+        "  filtered_summary = df[df['rating_count'] >= min_interactions]\n",
         "\n",
-        "# Sorting values with respect to average rating\n"
+        "# Sorting values with respect to average rating in descending order\n",
+        "  top_n_products = filtered_summary.sort_values(by='average_rating', ascending=False).head(n)\n",
+        "\n",
+        "  return top_n_products"
       ]
     },
     {
@@ -2615,12 +2620,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
-        "id": "dBxdLiM_xhXi"
+        "id": "dBxdLiM_xhXi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f6932d9d-cd69-46e6-ca1b-1a1b543ed117"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "            average_rating  rating_count\n",
+            "prod_id                                 \n",
+            "B001TH7GUU        4.871795            78\n",
+            "B003ES5ZUU        4.864130           184\n",
+            "B0019EHU8G        4.855556            90\n",
+            "B006W8U2MU        4.824561            57\n",
+            "B000QUUFRW        4.809524            84\n"
+          ]
+        }
+      ],
+      "source": [
+        "top_5_products = get_top_n_products(rating_summary, n=5, min_interactions=50)\n",
+        "print(top_5_products)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2633,12 +2659,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
-        "id": "dZgGZCUoxhXj"
+        "id": "dZgGZCUoxhXj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ca581412-d342-4504-9077-33510fcdf8a5"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "            average_rating  rating_count\n",
+            "prod_id                                 \n",
+            "B003ES5ZUU        4.864130           184\n",
+            "B000N99BBC        4.772455           167\n",
+            "B002WE6D44        4.770000           100\n",
+            "B007WTAJTO        4.701220           164\n",
+            "B002V88HFE        4.698113           106\n"
+          ]
+        }
+      ],
+      "source": [
+        "top_5_products = get_top_n_products(rating_summary, n=5, min_interactions=100)\n",
+        "print(top_5_products)"
+      ]
     },
     {
       "cell_type": "markdown",
