--- a/Recommendation_Systems_Learner_Notebook_Full_Code.ipynb
+++ b/Recommendation_Systems_Learner_Notebook_Full_Code.ipynb
@@ -2150,7 +2150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 31,
       "metadata": {
         "id": "yxZTj1UPxhXh",
         "scrolled": true,
@@ -2158,7 +2158,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "2941b55e-6147-4062-efd1-19fd935736c4"
+        "outputId": "8d616fe5-8f4f-4ed6-9568-97085109adbd"
       },
       "outputs": [
         {
@@ -2242,7 +2242,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-be166645-3420-4b59-a3a6-bb1ac7bb6aa3\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-dceea0ab-9a9f-4b5b-9997-47060b208cf3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2302,7 +2302,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-be166645-3420-4b59-a3a6-bb1ac7bb6aa3')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dceea0ab-9a9f-4b5b-9997-47060b208cf3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2354,12 +2354,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-be166645-3420-4b59-a3a6-bb1ac7bb6aa3 button.colab-df-convert');\n",
+              "        document.querySelector('#df-dceea0ab-9a9f-4b5b-9997-47060b208cf3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-be166645-3420-4b59-a3a6-bb1ac7bb6aa3');\n",
+              "        const element = document.querySelector('#df-dceea0ab-9a9f-4b5b-9997-47060b208cf3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2379,8 +2379,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-38d31342-48e6-4561-b0f9-7b004d607951\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-38d31342-48e6-4561-b0f9-7b004d607951')\"\n",
+              "<div id=\"df-93f6eb72-52eb-47bb-900f-ed113f6f0e7a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-93f6eb72-52eb-47bb-900f-ed113f6f0e7a')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2499,7 +2499,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-38d31342-48e6-4561-b0f9-7b004d607951 button');\n",
+              "        document.querySelector('#df-93f6eb72-52eb-47bb-900f-ed113f6f0e7a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -2516,7 +2516,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 31
         }
       ],
       "source": [
@@ -2543,7 +2543,12 @@
         "# Create a dataframe with calculated average and count of ratings\n",
         "print('---Create a dataframe with calculated average and count of ratings---')\n",
         "# Calculate average rating and count of ratings for each product\n",
-        "rating_summary = df_final.groupby('prod_id')['rating'].agg(['mean', 'count'])\n",
+        "# rating_summary = df_final.groupby('prod_id')['rating'].agg(['mean', 'count'])\n",
+        "rating_summary = pd.DataFrame(\n",
+        "    {'average_rating': average_ratings,\n",
+        "     'rating_count': rating_counts\n",
+        "     }\n",
+        "    )\n",
         "\n",
         "# Rename the columns for clarity\n",
         "rating_summary.columns = ['average_rating', 'rating_count']\n",
@@ -2858,7 +2863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 32,
       "metadata": {
         "id": "Rxn-GahOTsnm"
       },
@@ -3002,23 +3007,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "id": "vO3FL7iape8A",
-        "scrolled": false
+        "scrolled": false,
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7ebca5e8-af02-4ff1-e4ce-1cae182c726e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "RMSE: 1.0012\n",
+            "Precision:  0.855\n",
+            "Recall:  0.858\n",
+            "F_1 score:  0.856\n"
+          ]
+        }
+      ],
       "source": [
         "# Declaring the similarity options\n",
-        "\n",
+        "sim_options = {\n",
+        "    'name': 'cosine',  # Similarity metric: 'cosine' or 'pearson'\n",
+        "    'user_based': True  # True for User-User similarity, False for Item-Item similarity\n",
+        "}\n",
         "\n",
         "# Initialize the KNNBasic model using sim_options declared, Verbose = False, and setting random_state = 1\n",
+        "from surprise import KNNBasic\n",
         "\n",
+        "model = KNNBasic(sim_options=sim_options, verbose=False, random_state=1)\n",
         "\n",
         "# Fit the model on the training data\n",
+        "model.fit(trainset)\n",
         "\n",
-        "\n",
-        "# Let us compute precision@k, recall@k, and f_1 score using the precision_recall_at_k function defined above\n"
+        "# Let us compute precision@k, recall@k, and f_1 score using the precision_recall_at_k function defined above\n",
+        "precision_recall_at_k(model)"
       ]
     },
     {
@@ -3027,7 +3053,7 @@
         "id": "nEuJK_A9Tsnn"
       },
       "source": [
-        "**Write your observations here:__________**"
+        "**Write your observations here:** RMSE score of 1.0012 measures how far the predicted ratings are from the actual ratings. Precision score of 85.5% meas most of the products recommended to the user are relevant. Recall of 85.8% means proportions of relevant items actually were recommended. This means the model is retrieving a large portion of relevant items which is good for the coverage. F_1 score of 0.856 indicates a strong balance between precision and recall, meaning the model is both accurate and comprehensive in making recommendations."
       ]
     },
     {
