--- a/Recommendation_Systems_Learner_Notebook_Full_Code.ipynb
+++ b/Recommendation_Systems_Learner_Notebook_Full_Code.ipynb
@@ -3067,13 +3067,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
-        "id": "Sxd23bZ9pe_x"
+        "id": "Sxd23bZ9pe_x",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eaac6b71-410d-45bd-db7c-73cb97e2e4f9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Predicted rating for User A3LDPF5FMB782Z on Product 1400501466: 3.4\n"
+          ]
+        }
+      ],
       "source": [
-        "# Predicting rating for a sample user with an interacted product\n"
+        "# Predicting rating for a sample user with an interacted product\n",
+        "\n",
+        "user_id = 'A3LDPF5FMB782Z'  # Replace with an actual user ID\n",
+        "product_id = '1400501466'  # Replace with an actual product ID\n",
+        "\n",
+        "prediction = model.predict(user_id, product_id)\n",
+        "\n",
+        "# Display the predicted rating\n",
+        "print(f\"Predicted rating for User {user_id} on Product {product_id}: {prediction.est}\")"
       ]
     },
     {
@@ -3082,7 +3102,7 @@
         "id": "ENJcqG_wemRH"
       },
       "source": [
-        "**Write your observations here:__________**"
+        "**Write your observations here:** The user gave 5 rating while the model predicted 3.4. This suggests that the model underestimated the user's preference for this product. The model might be facing a cold start problem. It could also be a limitation of Similarity metric, and we could try using some other Similarity metric. We could also try by tuning hyperparameters"
       ]
     },
     {
@@ -3096,7 +3116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "id": "Hv9EYDffw1AH"
       },
@@ -3110,11 +3130,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
-        "id": "xCRBMD-RTsno"
+        "id": "xCRBMD-RTsno",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4653ec58-6acc-47b3-9015-55a938c2451f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['A3FS3FJPD3RJTD',\n",
+              " 'A2ARDVMUGDFED6',\n",
+              " 'A1MFPAM9TTRTXN',\n",
+              " 'A356RFKNIG043B',\n",
+              " 'A15U64VGUV6RBF']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ],
       "source": [
         "# Find unique user_id where prod_id is not equal to \"1400501466\"\n",
         "n_users_not_interacted_with(5, df_final, '1400501466')"
@@ -3140,13 +3179,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
-        "id": "PbFcBj1PpfEV"
+        "id": "PbFcBj1PpfEV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ae4f4c4b-8170-44c5-9ae4-2a672d079982"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Predicted rating for User A3FS3FJPD3RJTD on Product 1400501466: 4.292024046561495\n"
+          ]
+        }
+      ],
       "source": [
-        "# Predicting rating for a sample user with a non interacted product\n"
+        "# Predicting rating for a sample user with a non interacted product\n",
+        "user_id = 'A3FS3FJPD3RJTD'  # Replace with an actual user ID\n",
+        "product_id = '1400501466'  # Replace with an actual product ID\n",
+        "\n",
+        "prediction = model.predict(user_id, product_id)\n",
+        "\n",
+        "# Display the predicted rating\n",
+        "print(f\"Predicted rating for User {user_id} on Product {product_id}: {prediction.est}\")"
       ]
     },
     {
@@ -3155,7 +3213,7 @@
         "id": "02rwld8yemRI"
       },
       "source": [
-        "**Write your observations here:__________**"
+        "**Write your observations here:** In collaborative filtering systems, when a user has not seen a product, the model generates a predicted rating based on the similarity of the user with other users who have rated the product. In this case, the model predicted a rating of 4.29, which is relatively high, indicating that the model expects the user to like the product quite a bit."
       ]
     },
     {
