--- a/Recommendation_Systems_Learner_Notebook_Full_Code.ipynb
+++ b/Recommendation_Systems_Learner_Notebook_Full_Code.ipynb
@@ -4521,17 +4521,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {
-        "id": "07-2PT5Ssjqm"
+        "id": "07-2PT5Ssjqm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5cd683ef-6cc7-43f1-93b5-964884499bb3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "RMSE: 0.9192\n",
+            "Precision:  0.842\n",
+            "Recall:  0.895\n",
+            "F_1 score:  0.868\n",
+            "RMSE: 0.9192\n",
+            "Precision:  0.842\n",
+            "Recall:  0.895\n",
+            "F_1 score:  0.868\n"
+          ]
+        }
+      ],
       "source": [
         "# Using SVD matrix factorization. Use random_state = 1\n",
+        "from surprise import SVD\n",
+        "\n",
+        "# Create an SVD model using random_state=1\n",
+        "svd = SVD(random_state=1)\n",
         "\n",
         "# Training the algorithm on the trainset\n",
+        "svd.fit(trainset)\n",
         "\n",
-        "# Use the function precision_recall_at_k to compute precision@k, recall@k, F1-Score, and RMSE\n"
+        "# Let us compute precision@k, recall@k, F1-Score, and RMSE\n",
+        "\n",
+        "\n",
+        "# Use the function precision_recall_at_k to compute precision@k, recall@k, F1-Score, and RMSE\n",
+        "precision_recall_at_k(svd)\n"
       ]
     },
     {
@@ -4554,13 +4582,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "metadata": {
-        "id": "yWIhfdxXsjqm"
+        "id": "yWIhfdxXsjqm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bea2af0b-94db-44bd-9299-7f0683756b22"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Prediction(uid='A3LDPF5FMB782Z', iid='1400501466', r_ui=None, est=4.185644213819496, details={'was_impossible': False})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ],
       "source": [
-        "# Making prediction\n"
+        "# Making prediction\n",
+        "svd.predict('A3LDPF5FMB782Z', '1400501466')\n",
+        "\n"
       ]
     },
     {
@@ -4583,13 +4628,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {
-        "id": "APm-uMSvcAMf"
+        "id": "APm-uMSvcAMf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0ada52a0-ff27-4d4a-f884-8604c1e7ebc8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Prediction(uid='A2UOHALGF2X77Q', iid='1400501466', r_ui=None, est=4.343110560773549, details={'was_impossible': False})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ],
       "source": [
-        "# Making prediction\n"
+        "# Making prediction\n",
+        "svd.predict('A2UOHALGF2X77Q', '1400501466')\n"
       ]
     },
     {
@@ -4624,21 +4685,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {
-        "id": "4bM81V_hvtwv"
+        "id": "4bM81V_hvtwv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "02452d88-6b1a-48f9-977a-4c30390b3761"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Best parameters: {'rmse': {'n_epochs': 10, 'lr_all': 0.005, 'reg_all': 0.4}, 'mae': {'n_epochs': 10, 'lr_all': 0.005, 'reg_all': 0.4}}\n",
+            "Best RMSE: 0.9321473035514848\n",
+            "Best parameters: {'rmse': {'n_epochs': 10, 'lr_all': 0.005, 'reg_all': 0.4}, 'mae': {'n_epochs': 10, 'lr_all': 0.005, 'reg_all': 0.4}}\n",
+            "Best RMSE: 0.9321473035514848\n"
+          ]
+        }
+      ],
       "source": [
         "# Set the parameter space to tune\n",
+        "param_grid = {\n",
+        "    \"n_epochs\": [5, 10],  # Number of epochs\n",
+        "    \"lr_all\": [0.002, 0.005],  # Learning rate\n",
+        "    \"reg_all\": [0.4, 0.6]  # Regularization term\n",
+        "}\n",
         "\n",
         "# Performing 3-fold gridsearch cross-validation\n",
+        "grid_search = GridSearchCV(SVD, param_grid, measures=['rmse', 'mae'], cv=3)\n",
         "\n",
         "# Fitting data\n",
+        "grid_search.fit(data)\n",
+        "\n",
+        "# Find the best RMSE score\n",
+        "print(\"Best parameters:\", grid_search.best_params)\n",
+        "print(\"Best RMSE:\", grid_search.best_score['rmse'])\n",
         "\n",
         "# Best RMSE score\n",
+        "# Get and print the best hyperparameters and the best score (RMSE)\n",
+        "print(\"Best parameters:\", grid_search.best_params)\n",
+        "print(\"Best RMSE:\", grid_search.best_score['rmse'])\n",
         "\n",
-        "# Combination of parameters that gave the best RMSE score\n"
+        "# Combination of parameters that gave the best RMSE score\n",
+        "\n"
       ]
     },
     {
@@ -4652,17 +4743,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "metadata": {
-        "id": "TA_7xe-nnhuu"
+        "id": "TA_7xe-nnhuu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "10ebe900-d1ae-4c27-87c0-24f2cfa4fa5d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "RMSE: 0.9256\n",
+            "Precision:  0.837\n",
+            "Recall:  0.914\n",
+            "F_1 score:  0.874\n",
+            "RMSE: 0.9256\n",
+            "Precision:  0.837\n",
+            "Recall:  0.914\n",
+            "F_1 score:  0.874\n"
+          ]
+        }
+      ],
       "source": [
         "# Build the optimized SVD model using optimal hyperparameter search. Use random_state=1\n",
+        "svd_algo_optimized = SVD(n_epochs=10, lr_all=0.005, reg_all=0.4, random_state=1)\n",
         "\n",
         "# Train the algorithm on the trainset\n",
+        "svd_algo_optimized.fit(trainset)\n",
         "\n",
-        "# Use the function precision_recall_at_k to compute precision@k, recall@k, F1-Score, and RMSE\n"
+        "# Let us compute precision@k, recall@k, F1-Score, and RMSE\n",
+        "precision_recall_at_k(svd_algo_optimized)\n",
+        "\n",
+        "# Use the function precision_recall_at_k to compute precision@k, recall@k, F1-Score, and RMSE\n",
+        "precision_recall_at_k(svd_algo_optimized)\n"
       ]
     },
     {
@@ -4688,24 +4804,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {
-        "id": "mCBo1Kbmw1AL"
+        "id": "mCBo1Kbmw1AL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1a15c6de-d854-4158-96ca-a46ec2f4ccc2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Prediction(uid='A3LDPF5FMB782Z', iid='1400501466', r_ui=None, est=4.219043226500826, details={'was_impossible': False})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ],
       "source": [
-        "# Use svd_algo_optimized model to recommend for userId \"A3LDPF5FMB782Z\" and productId \"1400501466\"\n"
+        "# Use svd_algo_optimized model to recommend for userId \"A3LDPF5FMB782Z\" and productId \"1400501466\"\n",
+        "svd_algo_optimized.predict('A3LDPF5FMB782Z', '1400501466')\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
-        "id": "00SF7OHkw1AL"
+        "id": "00SF7OHkw1AL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bf3ce034-bfb2-40ae-8bb9-359d4cefe347"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Prediction(uid='A2UOHALGF2X77Q', iid='1400501466', r_ui=None, est=4.326766795894809, details={'was_impossible': False})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ],
       "source": [
-        "# Use svd_algo_optimized model to recommend for userId \"A2UOHALGF2X77Q\" and productId \"1400501466\"\n"
+        "# Use svd_algo_optimized model to recommend for userId \"A2UOHALGF2X77Q\" and productId \"1400501466\"\n",
+        "svd_algo_optimized.predict('A2UOHALGF2X77Q', '1400501466')\n"
       ]
     },
     {
