--- a/Music_Recommendation_System_Full_Code.ipynb
+++ b/Music_Recommendation_System_Full_Code.ipynb
@@ -1045,6 +1045,13 @@
         "Song metadata like \"artists\", \"year\", \"release\" and \"title\" can be used to for content-based feature recommendations for e.g recommend songs from the same artist or same year or same title.\n",
         "\n",
         "For recommendation of songs to the new users, we can use content-based filtering of the metadata, popular songs by the artist or new releases.\n",
+        "\n",
+        "After merging the 2 data frames, we can further deepen our knowledge of the user behaviour like\n",
+        "- What type of songs the users are listening to (genre via artist, release year etc)\n",
+        "- Most played songs or artists in a specific time period.\n",
+        "\n",
+        "\n",
+        "\n",
         "\n"
       ]
     },
