--- a/Music_Recommendation_System_Full_Code.ipynb
+++ b/Music_Recommendation_System_Full_Code.ipynb
@@ -1466,7 +1466,8 @@
         "# Display first 10 records of merged_data_df\n",
         "merged_data_df.head(10)\n",
         "\n",
-        "## Name the obtained dataframe as \"df\""
+        "## Name the obtained dataframe as \"df\"\n",
+        "df = merged_data_df\n"
       ]
     },
     {
@@ -1475,7 +1476,11 @@
         "id": "yWeY9ZT43XFX"
       },
       "source": [
-        "**Think About It:** As the user_id and song_id are encrypted. Can they be encoded to numeric features?"
+        "**Think About It:** As the user_id and song_id are encrypted. Can they be encoded to numeric features?\n",
+        "\n",
+        "Most machine learning algorithms work with numeric data and hence the string values need to be encoded into numeric features.\n",
+        "\n",
+        "Encoded numeric values can be used for user item matrix, apply matrix factorization. Also numeric values are more memory efficient in performing calculation on large models."
       ]
     },
     {
