--- a/Music_Recommendation_System_Full_Code.ipynb
+++ b/Music_Recommendation_System_Full_Code.ipynb
@@ -2945,7 +2945,19 @@
         "id": "VUcXc7ZYfaGl"
       },
       "source": [
-        "#### **Observations and Insights:__________** #"
+        "#### **Observations and Insights:__________** #\n",
+        "\n",
+        "A very high number of plays come from songs released between 2007 and 2009.\n",
+        "\n",
+        "These three years alone account for a significant portion of the total listening behavior.\n",
+        "\n",
+        "In 2010, the number of played songs drops.\n",
+        "\n",
+        "Only 1 title was played from 2011 releases — this is likely a data issue or missing data for that year.\n",
+        "\n",
+        "For a recommender system, it may be worth prioritizing songs from these peak years, especially for cold starts.\n",
+        "\n",
+        "Investigate low-engagement years and assess if it’s a catalog gap or metadata issue."
       ]
     },
     {
