--- a/Milestone_Music_Recommendation_System_Full_Code.ipynb
+++ b/Milestone_Music_Recommendation_System_Full_Code.ipynb
@@ -606,7 +606,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 363
+          "height": 415
         },
         "id": "tV1ed0ApXpu3",
         "outputId": "95f02da3-23d8-4733-f0e6-d107edaa349c"
@@ -1116,7 +1116,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 576
+          "height": 750
         },
         "id": "oTeurvID2T9U",
         "outputId": "fecdda0b-e30b-4d15-bc44-b665b2cb97aa"
@@ -2990,7 +2990,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 477
+          "height": 392
         },
         "id": "bZCkOiAB2T9Y",
         "outputId": "025a2df8-c226-4776-eb26-b4a852ffe7af"
@@ -4103,13 +4103,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vO3FL7iape8A",
-        "outputId": "8f3d926e-7ae2-4dd2-989a-580561f56b40",
+        "outputId": "28efffac-b46a-47f7-df28-581a9746d630",
         "scrolled": false
       },
       "outputs": [
@@ -4117,10 +4117,10 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "RMSE: 1.0817\n",
-            "Precision:  0.312\n",
-            "Recall:  0.129\n",
-            "F_1 score:  0.183\n"
+            "RMSE: 0.9077\n",
+            "Precision:  0.559\n",
+            "Recall:  0.78\n",
+            "F_1 score:  0.651\n"
           ]
         }
       ],
@@ -4252,11 +4252,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
-        "id": "T3diJPL7-tVw"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T3diJPL7-tVw",
+        "outputId": "b9307f91-17ff-491d-bee3-d5883d85e6af"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.0033287173052823\n",
+            "{'k': 30, 'min_k': 9, 'sim_options': {'name': 'pearson_baseline', 'user_based': True, 'min_support': 2}}\n"
+          ]
+        }
+      ],
       "source": [
         "# Setting up parameter grid to tune the hyperparameters\n",
         "param_grid = {'k': [10, 20, 30], 'min_k': [3, 6, 9],\n",
@@ -4283,11 +4296,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
-        "id": "PujRJA8X_JEJ"
+        "id": "PujRJA8X_JEJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "758a3d29-6393-4279-9efc-268fca5891f5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<surprise.prediction_algorithms.knns.KNNBasic at 0x79db97790d10>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ],
       "source": [
         "# Train the best model found in above gridsearch\n",
         "best_param = gs.best_params['rmse']\n",
@@ -4300,15 +4328,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "M-bBBM2kQeKH"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "MH5OBZ7Nse6m"
@@ -4319,24 +4338,58 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
-        "id": "FgV63lHiq1TV"
+        "id": "FgV63lHiq1TV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "972696b2-1b47-41c8-d614-bcf13dea39eb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Prediction(uid=6958, iid=1671, r_ui=2, est=1.8982917151288752, details={'actual_k': 30, 'was_impossible': False})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ],
       "source": [
-        "# Predict the play count for a user who has listened to the song. Take user_id 6958, song_id 1671 and r_ui = 2\n"
+        "# Predict the play count for a user who has listened to the song. Take user_id 6958, song_id 1671 and r_ui = 2\n",
+        "\n",
+        "best_model.predict(uid=6958, iid=1671, r_ui=2)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
-        "id": "HXO2Ztjhq1bN"
+        "id": "HXO2Ztjhq1bN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e0969391-1b30-4e53-c090-8d76562ed23e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Prediction(uid=6958, iid=3232, r_ui=None, est=1.5724887857236887, details={'actual_k': 30, 'was_impossible': False})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ],
       "source": [
-        "# Predict the play count for a song that is not listened to by the user (with user_id 6958)\n"
+        "# Predict the play count for a song that is not listened to by the user (with user_id 6958)\n",
+        "\n",
+        "best_model.predict(uid=6958, iid=3232)\n"
       ]
     },
     {
@@ -4365,7 +4418,8 @@
       },
       "outputs": [],
       "source": [
-        "# Use inner id 0\n"
+        "# Use inner id 0\n",
+        "\n"
       ]
     },
     {
